--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -3,14 +3,13 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
-    link(rel='stylesheet', href='https://www.w3schools.com/w3css/4/w3.css')
-    // link(rel='shortcut icon', href='//cdn2.auth0.com/styleguide/latest/lib/logos/img/favicon.png')
+    link(rel='stylesheet', href='/stylesheets/w3.css')
     link(rel='shortcut icon', href='/stylesheets/favicon.png')
 
   body
     nav.w3-bar.w3-border.w3-light-grey( role="navigation" )
       .w3-bar-item.w3-text-grey NGI Shiny
-      a(href="/").w3-bar-item.w3-button Hjem
+      a(href="/home").w3-bar-item.w3-button Hjem
       if locals.user
         a(href="/user" ).w3-bar-item.w3-button Profil
         a(id="qsLogoutBtn" href="/logout").w3-bar-item.w3-button Logg ut
