use /forside/ as default page

--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -9,7 +9,7 @@ html
   body
     nav.w3-bar.w3-border.w3-light-grey( role="navigation" )
       .w3-bar-item.w3-text-grey NGI Shiny
-      a(href="/home").w3-bar-item.w3-button Hjem
+      a(href="/forside").w3-bar-item.w3-button Hjem
       if locals.user
         a(href="/user" ).w3-bar-item.w3-button Profil
         a(id="qsLogoutBtn" href="/logout").w3-bar-item.w3-button Logg ut
