--- a/app/views/error.pug
+++ b/app/views/error.pug
@@ -1,6 +1,16 @@
-extends layout
+doctype html
+html
+  head
+    title= title
+    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/w3.css')
+    link(rel='shortcut icon', href='/stylesheets/favicon.png')
 
-block content
-  h1= message
-  h2= error.status
-  pre #{error.stack}
+  body
+    nav.w3-bar.w3-border.w3-light-grey( role="navigation" )
+      .w3-bar-item.w3-text-grey NGI Shiny
+      a(id="qsLogoutBtn" href="/logout").w3-bar-item.w3-button Forside
+
+    h1= message
+    h2= error.status
+    // pre #{error.stack}
