--- a/app/views/error.pug
+++ b/app/views/error.pug
@@ -11,6 +11,6 @@ html
       .w3-bar-item.w3-text-grey NGI Shiny
       a(id="qsLogoutBtn" href="/logout").w3-bar-item.w3-button Forside
 
-    h1= message
-    h2= error.status
+    h2= message
+    // h2= error.status
     // pre #{error.stack}
