--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -10,7 +10,8 @@ html
 
   body
     nav.w3-bar.w3-border.ngi-nav( role="navigation" )
-      img(src='/stylesheets/Slide6.PNG')
+      a(href="/", title="Gå til forsiden")
+        img(src='/stylesheets/Slide6.PNG')
       a(href="https://ngi.no", target="_blank", title="Gå til NGI.no")
         img(src='/stylesheets/ngi-logo.jpg').ngi-logo
       a(href="/", title="Gå til forsiden").fas.fa-home
