--- a/open-app/views/error.pug
+++ b/open-app/views/error.pug
@@ -1,6 +1,12 @@
 extends layout
 
 block content
-  h1= message
-  h2= error.status
-  pre #{error.stack}
+    div.error-message= message
+    div.contact-us Ved spørsmål ta kontakt via 
+        | <a href="mailto:miljoskytjenester@ngi.no" target="_blank">miljoskytjenester@ngi.no</a>.
+    div.privacy Personvernerklæring: For å ivareta datasikkerheten lagrer NGI epostadresser og telefonnumrene for alle 
+        | brukere av skytjenesten, samt brukerstatistikk, for å sikre tjenesten mot hackerangrep og utøve tilgangsbegrensning.
+        | Se for øvrig skytjenestens 
+        | <a href="https://s3.eu-central-1.amazonaws.com/public-ngi-files/Personvernerkl%C3%A6ring_for_skytjenester_NGI.pdf" target="_blank">
+        | personvernerklæring</a>.
+
